# MusicTheory

./: .gitignore  12TET_APPROXIMATION_METHODOLOGY_GUIDE.md  ACADEMIC_VALIDATION_TOOLS_README.md  Algorithmic Harmony Paper.docx  Algorithmic Harmony Paper.formatted.docx  Algorithmic Harmony Paper.md  BEFORE_AFTER_COMPARISON.md  BITWIG_MIDI_INTEGRATION.md  BUILD_AND_RUN.md  CHANGELOG.md  CHORD_VOICING_VARIETY_IMPLEMENTATION.md  COLLISION_PRESET_IMPLEMENTATION.md  CURRENT_DEBUGGING_STATUS.md  DEBUGGING_CHECKLIST.md  DEBUGGING_MAIN_APP_ISSUE.md  ENHANCED_GRADING_IMPLEMENTATION_SUMMARY.md  ENHANCED_GRADING_LEXICAL_INTEGRATION_FIX.md  FILE_INDEX.md  FINAL_STATUS.md  GENERATIVE_SYSTEM.md  GENERATIVE_SYSTEM_FIXES.md  GRADING_METADATA_EXPORT_IMPLEMENTATION.md  GRADING_MODE_PROPAGATION_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_V2.md  IMPLEMENTATION_SUMMARY.md  INVERSIONS_ADVANCED_IMPROVEMENTS.md  INVERSIONS_UI_REDESIGN.md  INVERSION_VARIETY_FIX.md  MASTER_SETUP.bat  MASTER_SETUP_LOG.bat  MIDI_INTEGRATION.md  MIDI_SETUP_SUMMARY.md  PIANO_AUDIO_UPGRADE.md  PIANO_ENHANCEMENTS.md  PIANO_REFACTORING_PHASE1.md  PRESET_SYSTEM.md  PROGRESSION_CREATIVITY_FIX.md  QUICK_REFERENCE.txt  RADIAL_MENU_ENHANCEMENTS.md  (+259 more)
.github/workflows/: ci.yml  (+1 more)
logs/: interaction-log.json
midi output/: C_major_Cmaj7_to_G7_5bars_1130_2329.mid  C_major_melody-harm_1130_2045.mid
scale-data-scraper/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
scale-existence-cleanup/: cli_main.py  config.yaml  debug_cli_import.py  debug_cli_step_by_step.py  debug_test.py  fix_imports.py  requirements.txt  simple_cli.py  test.yaml  test_cli.py  test_compatibility_real.py  test_full_integration.py  test_import.py  test_minimal_cli.py  test_real_database.py  test_writer_real.py
tools/: bitwig_midi_server.py  chord_tests.js  create_final_project_slides.gs  debug_degree4_fixed.js  generate_docx_from_md.py  test_progression_builder.js  test_progression_escalation.html  test_sheet_display.html  test_simplify.js  test_whole_tone.js  update_readme.js  validate-citations.js  verify_fullname.js
validation/: attribution-verifier.js  batch-processor.js  citation-report.json  citation-report.md  content-analyzer.js  duplicate-detector.js  enhanced-music-theory-integration.js  http-client.js  music-theory-engine-extensions.js  music-theory-validation-integration.js  reference-replacer.js  reference-validator.js  shared-reference-verifier.js  source-matcher.js  validation-cli.js  validation-orchestrator.js  validation-reporter.js  validation-scheduler.js  verified-source-database.js
vst3-plugin/: CMakeLists.txt  QUICKSTART.md  QUICK_BUILD.bat  README.md  README_BUILD_STATUS.md  build_plugin.ps1  run_setup_env.bat  setup_python_env.ps1
vst3-plugin/src/: entry.cpp  version.h
vst3-plugin/src/network/: HttpClient.cpp  HttpClient.h
vst3-plugin/src/plugin/: MusicTheoryController.cpp  MusicTheoryController.h  MusicTheoryPlugin.cpp  MusicTheoryPlugin.h
(+986 files in other folders)
